tests/ui/parser/recover/recover-assoc-eq-missing-term.stderr
error: missing type to the right of `=`
  --> $DIR/recover-assoc-eq-missing-term.rs:3:17
   |
LL |     bar::<Item =   >();
   |                 ^^^
   |
help: to constrain the associated type, add a type after `=`
   |
LL |     bar::<Item = TheType>();
   |                  +++++++
help: remove the `=` if `Item` is a type
   |
LL -     bar::<Item =   >();
LL +     bar::<Item>();
   |

error: aborting due to 1 previous error

