tests/ui/parser/recover/recover-assoc-eq-missing-term.rs
#[cfg(false)]
fn syntax() {
    bar::<Item =   >(); //~ ERROR missing type to the right of `=`
}

fn main() {}
